support both create apis
