# fabric_cf/orchestrator/swagger_server/swagger/swagger.yaml
@@ -391,6 +391,89 @@ paths:
         schema:
           minLength: 3
           type: string
+      - name: sshKey
+        in: query
+        description: User SSH Key
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: lease_end_time
+        in: query
+        description: Lease End Time for the Slice
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+      requestBody:
+        $ref: '#/components/requestBodies/Request'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/slivers'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_400_bad_request'
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_401_unauthorized'
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_403_forbidden'
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_404_not_found'
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/status_500_internal_server_error'
+      security:
+      - bearerAuth: []
+      x-openapi-router-controller: fabric_cf.orchestrator.swagger_server.controllers.slices_controller
+  /slices/creates:
+    post:
+      tags:
+      - slices
+      summary: Create slice
+      description: "Request to create slice as described in the request. Request would\
+        \ be a graph ML describing the requested resources. Resources may be requested\
+        \ to be created now or in future. On success, one or more slivers are allocated,\
+        \ containing resources satisfying the request, and assigned to the given slice.\
+        \ This API returns list and description of the resources reserved for the\
+        \ slice in the form of Graph ML. Orchestrator would also trigger provisioning\
+        \ of these resources asynchronously on the appropriate sites either now or\
+        \ in the future as requested. Experimenter can invoke get slice API to get\
+        \ the latest state of the requested resources. \n"
+      operationId: slices_creates_post
+      parameters:
+      - name: name
+        in: query
+        description: Slice Name
+        required: true
+        style: form
+        explode: true
+        schema:
+          minLength: 3
+          type: string
       - name: lease_end_time
         in: query
         description: Lease End Time for the Slice
@@ -1471,6 +1554,12 @@ components:
           items:
             type: string
   requestBodies:
+    Request:
+      content:
+        text/plain:
+          schema:
+            type: string
+      required: true
     payload_slices_modify:
       description: Modify a Slice
       content:
